filled out biography and spacing issue

--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,7 @@ a{
     font-family: font-family: Palatino Linotype, Book Antiqua3, Palatino, serif;
     
 }
+
+p{
+    text-indent: 50px;
+}
